changed some spacing issues, and began working on mobile optimization

--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,7 @@ main#newQuotePage{
   background: #313131;
 }
 #mobileMenu ul{
+  font-size: 0.8rem !important;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -46,7 +47,7 @@ main#newQuotePage{
   text-align: center;
   text-decoration: none;
   color:#fff;
-  padding:1em;
+  padding:1em 0;
   box-sizing: border-box;
 }
 #mobileMenu li a.current{
@@ -676,7 +677,7 @@ a.sectionTitle{
     background: #4b8709;
     width: 100%;
     box-sizing: border-box;
-    position: fixed;
+    position: static;
     top:0;
     z-index: 88;
 }
@@ -747,7 +748,7 @@ a.sectionTitle{
     top: 10%;
     right: 0;
     height: 80%;
-    z-index: 100;
+    z-index: 87;
     border-right: thin solid #222;
 }
 .card h3 {
@@ -1337,7 +1338,9 @@ width: 100%;
   float: none;
   clear: both;
 }
-
+#saveit.greenButton.email{
+  margin:2em 0;
+}
 
 /*FOR CMS*/
 .tabTitle{
@@ -1640,6 +1643,9 @@ background: #313131;
 }
 /**********************************************************************************************/
 @media only screen and (min-width: 40rem) {
+  #mainHeader{
+    position:fixed;
+  }
 /*#mainDashboard, #cmsDashboard{
   display: block;
 }*/
